<resources>
    <string name="app_name">私享</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">私享</string>
    <string name="main_title">信息</string>
    <string name="main_contact">名片夹</string>
    <string name="main_more">我</string>
    <string name="app_new">new</string>
    <string name="main_addcontact">发现</string>
    <string name="new_field_suffix">（新）</string>
    <string name="mobile_phone_number">手机号码</string>
    <string name="home_phone_number">家庭电话号码</string>
    <string name="work_phone_number">工作电话号码</string>
    <string name="other_phone_number">其他电话号码</string>
    <string name="email_address">电子邮件地址</string>
    <string name="home_address">家庭地址</string>
    <string name="work_address">工作地址</string>
    <string name="url">URL</string>
    <string name="street">街道</string>
    <string name="city">城市</string>
    <string name="zip">邮编</string>
    <string name="state">州/省</string>
    <string name="country">国家</string>
    <string name="first_name">名字</string>
    <string name="last_name">姓氏</string>
    <string name="job_title_and_org">职位 - 组织</string>
    <string name="add_field">添加字段</string>
    <string name="unsent_items">未发送项目</string>
    <string name="edit_info">编辑信息</string>
    <string name="choose_photo">选择照片</string>
    <string name="take_photo">照相</string>
    <string name="name_str">姓名:</string>
    <string name="occupation_str">职位:</string>
    <string name="company_str">公司:</string>
    <string name="phone_str">电话:</string>
    <string name="mobile_str">手机:</string>
    <string name="email_str">邮箱:</string>
    <string name="addr_str">地址:</string>
    <string name="name_label">姓名</string>
    <string name="occupation_label">职位</string>
    <string name="phone_label">电话</string>
    <string name="mobile_label">手机</string>
    <string name="email_label">邮箱</string>
    <string name="addr_label">地址</string>
    <string name="card_edit_title">编辑个人名片</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="edit_card">编辑名片</string>
    <string name="apps">应用</string>
    <string name="hint">提示</string>
    <string name="exit_card_editor_hint">存在未保存的数据，确定要离开？</string>
    <string name="ok">确定</string>
    <string name="share_card">分享名片</string>
    <string name="start_share">开始分享</string>
    <string name="receive_card">接收名片</string>
    <string name="back">返回</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="look">看一看</string>
    <string name="forgot_passwd">忘记安全码?</string>
    <string name="user_hint">请输入手机号</string>
    <string name="passwd_hint">请输入安全码</string>
    <string name="next_step">下一步</string>
    <string name="done">完成</string>
    <string name="login_verify_method">为了验证身份，我们将会发送短信验证码</string>
    <string name="login_input_phone_tips">请输入你的手机号</string>
    <string name="login_input_verify_code_hint">输入收到的验证码</string>
    <string name="login_verify_code_sent_to">验证码已发送至手机</string>
    <string name="login_hint_password">请输入安全码</string>
    <string name="register_confirm_password">请再次输入安全码</string>
    <string name="register_new_account">注册新用户</string>
    <string name="user_name_fail">用户名未输入</string>
    <string name="real_name_fail">姓名未输入</string>
    <string name="passwd_fail">安全码未输入</string>
    <string name="confirm_pass_fail">安全码确认未输入</string>
    <string name="passwd_verify_fail">两次输入安全码不匹配</string>
    <string name="passwd_too_short">请至少输入6位安全码</string>
    <string name="user_passwd_empty">用户名或安全码未输入</string>
    <string name="user_passwd_error">用户名或安全码错误</string>
    <string name="usermycard">使用已有名片</string>
    <string name="hascard"><u>已有名片</u></string>
    <string name="login_fail">登陆失败</string>
    <string name="loading">加载中</string>
    <string name="no_card">无名片</string>
    <string name="no_message">无消息</string>
    <string name="view_card">查看</string>
    <string name="delete">删除</string>
    <string name="send_msg">发消息</string>
    <string name="add_as_friend">加为好友</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_to_contact">添加到联系人</string>
    <string name="user_name_empty_hint">用户名不能为空</string>
    <string name="phone_num_error">请输入正确手机号</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="wait_hint">请稍候</string>
    <string name="reg_success_hint">注册成功</string>
    <string name="reg_fail_hint">注册失败</string>
    <string name="build_card_hint">个人信息未建立，请先创建个人名片</string>
    <string name="name_empty_hint">名字不能为空</string>
    <string name="mobile_empty_hint">手机不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="exit_application">退出</string>
    <string name="quick_exchange">私密传送</string>
    <string name="privateshare">私密分享</string>
    <string name="new_card_received_hint">收到新名片</string>
    <string name="ultrasonic_listen_on">超声波监听开启</string>
    <string name="ultrasonic_listen_off">超声波监听关闭</string>
    <string name="app_installed">应用已安装</string>
    <string name="app_install_fail">应用安装失败</string>
    <string name="app_voice">多人语音</string>
    <string name="title_activity_voice_api">VoiceAPI</string>
    <string name="btnInit">init</string>
    <string name="set_uid">set_uid</string>
    <string name="join">join</string>
    <string name="fini">fini</string>
    <string name="testroom">testroom</string>
    <string name="leave">leave</string>
    <string name="testServer">voice.91.com</string>
    <string name="testPort">9601</string>
    <string name="btnMuteMicrophone">Mic</string>
    <string name="muteSpeaker">Speaker</string>
    <string name="lbPlayout">Playout Volume</string>
    <string name="lbGain">Audio Gain</string>
    <string name="chkLoudspeaker">Loudspeaker</string>
    <string name="record">REC</string>
    <string name="stop">STOP</string>
    <string name="play">PLAY</string>
    <string name="changeVoice">Change Voice</string>
    <string name="SMS">SMS</string>
    <string name="search">搜索</string>
    <string name="msg_title">信息</string>
    <string name="card_title">名片夹</string>
    <string name="apps_title">应用</string>
    <string name="my_card_label">我的名片</string>
    <string name="system_photos">系统图片</string>
    <string name="private_photos">私密图片</string>
    <string name="all_photos">所有图片</string>
    <string name="msg_details">消息详情</string>
    <string name="from_card_prefix">"收到来自 "</string>
    <string name="from_card_suffix">" 的名片,未保存名片"</string>
    <string name="auto_destory_time">自动焚毁时限</string>
    <string name="file_path">位置</string>
    <string name="detail">详情</string>
    <string name="share_the_app">分享此应用</string>
    <string name="delete_msg">删除该消息</string>
    <string name="look_detail">查看详情</string>
    <string name="share_mycard">分享</string>
    <string name="sync_read">同步浏览</string>
    <string name="create_sync">创建同步浏览</string>
    <string name="connect_sync">连接同步浏览</string>
    <string name="file_browser_title">选择同步浏览文件</string>
    <string name="select_dir">选择目录</string>
    <string name="no_file">没有文件</string>
    <string name="sd_folder">SD 卡</string>
    <string name="select_file">选择文件</string>
    <string name="progress_waiting">等待...</string>
    <string name="sync_progress_create">同步浏览创建中...</string>
    <string name="sync_progress_connect">分享生活</string>
    <string name="prev_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="sync_mode_normal">常规</string>
    <string name="sync_mode_comment">标注</string>
    <string name="msg_list">消息列表</string>
    <string name="press_hint">按住接收文件</string>
    <string name="exit_hint">确定离开</string>
    <string name="qe_main_app">应用</string>
    <string name="qe_main_pic">图片</string>
    <string name="qe_main_audio">音乐</string>
    <string name="qe_main_file">文件</string>
    <string name="qe_main_more">历史</string>
    <string name="qe_main_title">私密分享</string>
    <string name="shop_count">(0)</string>
    <string name="available_time">有效期</string>
    <string name="set_time_button_text">确定</string>
    <string name="st_text_hrs">      小时      分钟</string>
    <string name="st_text_eternity">永久有效</string>
    <string name="customer">自定义</string>
    <string name="custom_button_text">确认</string>
    <string name="st_text_custom">自定义设置</string>
    <string name="list">列表</string>
    <string name="sure">确定</string>
    <string name="all_delete">全部删除</string>
    <string name="multi_select">多选</string>
    <string name="send">发送</string>
    <string name="model_choose">模板选择：</string>
    <string name="trans_title">传输</string>
    <string name="chose_valid_time">选择有效期</string>
    <string name="hours_single">时</string>
    <string name="mins_single">分</string>
    <string name="secs_single">秒</string>
    <string name="chose_time">选择时间</string>
    <string name="input_name_hint">请输入姓名</string>
    <string name="input_company_hint">公司</string>
    <string name="input_title_hint">职位</string>
    <string name="input_cell_hint">添加手机</string>
    <string name="input_telephone_hint">添加固话</string>
    <string name="input_email_hint">添加电子邮件</string>
    <string name="input_addr_hint">添加地址</string>
    <string name="select_template">选择名片模板</string>
    <string name="wifi_ap_fail_no_mobile">没有移动网络，无法创建热点进行分享,请选择连接</string>
    <string name="new_version_hint">"私享"有新版本，点击更新</string>
    <string name="install_new_version_hint">点击安装新版"私享"!</string>
    <string name="new_version_notify">"私享"有可用的新版本</string>
    <string name="new_version_ready_install">新版本已下载完成</string>
    <string name="check_update">版本更新</string>
    <string name="import_wait">正在导入联系人，请稍候...</string>
    <string name="add_contacts">添加通讯录好友</string>
    <string name="sync_title">同步浏览</string>
    <string name="choosesync_title">选择同步文件</string>
    <string name="new_share">新的分享</string>
    <string name="im_port">导入</string>
    <string name="no_record">暂无历史记录</string>
    <string name="connecting">连接</string>
    <string name="about">关于</string>
    <string name="needlogin">需要注册才可以使用此功能</string>
    <string name="version_code">版本号: </string>
    <string name="build_self_card_hint">请先建立个人名片</string>
    <string name="sync_file_no_exist">同步文件不存在</string>
    <string name="sdcard_no_exist">SD卡不存在</string>
    <string name="update_new_version_msg">有新版本，请点击下载更新包</string>
    <string name="update_lattest_version_msg">当前版本为最新版本</string>
    <string name="update_network_error">网络故障，检查失败，请稍后再试</string>
    <string name="enter_private_mode_hint">进入私密分享，自动关闭您的公用wifi连接，数据网络，蓝牙</string>
    <string name="enter_sync_mode_hint">进入同步浏览，自动关闭您的公用wifi连接，数据网络，蓝牙</string>
    <string name="enter_private_no_hint">不再提醒</string>
    <string name="more_str">更多</string>
    <string name="shrink_str">收起</string>
    <string name="import_again_hint">联系人或已导入，确定需要再次导入?</string>
    <string name="pre_import_hint">确定导入电话本联系人?</string>
    <string name="download_progress">下载"私享"更新包</string>
    <string name="download_success">"私享"更新包下载完成</string>
    <string name="install_new_version_msg">新版本已下载完成，请安装</string>
    <string name="start_download">开始下载</string>
    <string name="start_install">安装</string>
    <string name="new_version_checking">新版本检测更新中</string>
    <string name="title_communicate">沟通</string>
    <string name="meeting_invite">会议邀请</string>
    <string name="title_trans_affection">传情</string>
    <string name="title_share">分享</string>
    <string name="import_new_sync">创建新的分享</string>
    <string name="import_file">打开文件</string>
    <string name="system_file_not_readable">无法读取文件，请确认是否为系统文件</string>
    <string name="multi_talk">多人语音</string>
    <string name="conn_user_title">成员</string>
    <string name="press_to_connect">按住连接</string>
    <string name="share_text_prefix">私享，打造私密的分享圈!\n下载地址:\n</string>
    <string name="warn_time_invalidate">无效时间，请重新设置。</string>
    <string name="room_empty">请先进入聊天室</string>
	<string name="createcard">创建名片</string>
</resources>