<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtConference"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/testroom" />

        <Button
            android:id="@+id/btnJoin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/join" />

        <Button
            android:id="@+id/btnLeave"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/leave" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chkLoudspeaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkLoudspeaker"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkMuteSpeaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muteSpeaker"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkMuteMicrophone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMuteMicrophone"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="@string/changeVoice" />

        <Spinner
            android:id="@+id/spinerChangeVoice"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/lbPlayout" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbGain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/sbGain"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <SeekBar
            android:id="@+id/sbSpeakear"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>
    
    <EditText
        android:id="@+id/edtHint"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:singleLine="false" />    
</LinearLayout>