<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/button_tiltebar_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/verify_button"
            style="@style/shadow_title_text_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/g_title_bar_complete_btn_selector"
            android:enabled="false"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="14.0sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_btn"
            style="@style/shadow_title_text_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/g_title_bar_complete_btn_selector"
            android:enabled="false"
            android:paddingLeft="14.0dip"
            android:paddingRight="14.0dip"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="14.0sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/register_view"
            style="@style/shadow_title_text_view_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mobile_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="16.0dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <cn.nd.social.ui.controls.MobileEditText
            android:id="@+id/mobile_edittext"
            style="@style/clearable_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:hint="@string/login_input_phone_tips"
            android:inputType="phone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="13.0dip"
            android:lineSpacingExtra="6.0dip"
            android:text="@string/login_verify_method"
            android:textColor="@color/textcolor_secondline"
            android:textSize="14.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_code_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="21.0dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_verify_code_sent_to"
                android:textColor="@color/textcolor_secondline"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/current_mobile_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:textColor="#ff3785b9"
                android:textSize="16.0sp" />
        </LinearLayout>

        <cn.nd.social.ui.controls.ClearableEditTextWithIcon
            android:id="@+id/verify_code_edittext"
            style="@style/clearable_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:hint="@string/login_input_verify_code_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/simple_reg_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="16.0dip"
        android:orientation="vertical"
        android:visibility="visible" >

        <cn.nd.social.ui.controls.MobileEditText
            android:id="@+id/mobile_text"
            style="@style/clearable_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:hint="@string/login_input_phone_tips"
            android:inputType="phone" />

        <cn.nd.social.ui.controls.ClearableEditTextWithIcon
            android:id="@+id/passwd_text"
            style="@style/clearable_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <cn.nd.social.ui.controls.ClearableEditTextWithIcon
            android:id="@+id/passwd_confirm_text"
            style="@style/clearable_edit_style"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_new_btn"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="16.0dip"
            android:background="@drawable/btn_style_green"
            android:text="@string/register_new_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>