<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
			android:focusable="true"
            android:focusableInTouchMode="true"
            >
			<Button 
			    android:id="@+id/btn_back"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:background="@drawable/button_back1"
			    android:layout_margin="10dp"
			    android:layout_gravity="left"/>
			<TextView 
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_card_hint"
                android:textColor="#60ffffff"
                android:textSize="13sp"
                android:gravity="top"
                android:layout_margin="10dp"
                android:visibility="gone"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_face"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_face" />

                <Button
                    android:id="@+id/btn_filter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@+id/iv_face"
                    android:layout_alignRight="@+id/iv_face"
                    android:background="@drawable/btn_filter" />
 				<EditText
                    android:id="@+id/et_realname"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/iv_face"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/tf_back"
                    android:hint="@string/input_name_hint"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
               
 				<EditText
                    android:id="@+id/et_username"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/et_realname"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tf_back"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:hint="@string/user_hint"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/et_username"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tf_back"
                    android:inputType="textPassword"
                    android:hint="@string/passwd_hint"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_confirm"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/et_password"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tf_back"
                    android:hint="@string/register_confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
            </RelativeLayout>
            
           

            <Button
                android:id="@+id/btn_more"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_more" />
            
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:id="@+id/layout_more"
                android:gravity="center_horizontal"
                android:orientation="vertical" 
                android:visibility="gone"
                >

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_tf_empty"
                    android:hint="@string/phone_str"
                    android:inputType="phone"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_phone"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_tf_empty"
                    android:hint="@string/email_str"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
                <EditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_email"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_tf_empty"
                    android:hint="@string/company_str"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
                 <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_company"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_tf_empty"
                    android:hint="@string/addr_str"
                    android:paddingLeft="10dip"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
                
            </RelativeLayout>
			
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login"
                android:text="@string/createcard"
                android:textColor="#ffffff"
                android:textSize="15sp" />
       <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tf_layout"
        android:layout_marginTop="20dp" 
        android:layout_centerInParent="true"
        android:id="@+id/ly_other"
        >
        <Button
            android:id="@+id/btn_hascard"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:text="@string/hascard"
            android:textColor="#60ffffff"
            android:layout_marginLeft="20dp"
            android:textSize="15sp" />
        
        <Button
            android:id="@+id/btn_try"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_try"
            android:text="@string/look"
            android:textColor="#60ffffff"
            android:textSize="15sp" />
        
        </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>